...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DKA-bl-Rfs">
                                <rect key="frame" x="57" y="132" width="300" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="300" id="KA6-le-WOF"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="First"/>
                                <connections>
                                    <action selector="firstButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FhI-Xg-SmA"/>
                                    <segue destination="L9y-zA-cTy" kind="show" id="JKx-5p-hjJ"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HKy-it-lTi">
...
                            <constraint firstItem="DKA-bl-Rfs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="88" id="DwR-au-3eO"/>
                            <constraint firstItem="DKA-bl-Rfs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LPx-Ay-Bmq"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DKA-bl-Rfs" secondAttribute="bottom" constant="630" id="Wcp-NU-UmH"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="label" destination="Kac-tM-mf2" id="M8a-jo-ehc"/>
                        <outlet property="textField1" destination="42x-BB-9ky" id="pjx-N2-wii"/>
                        <outlet property="textField2" destination="HKy-it-lTi" id="tem-GK-QxE"/>
                        <outlet property="textField3" destination="V2o-ww-iFe" id="ouQ-gH-qcg"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NLh-qF-e8f">
                                <rect key="frame" x="57" y="120" width="300" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="300" id="fRs-gF-LaU"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Second"/>
                                <connections>
                                    <segue destination="gV5-OL-e2i" kind="show" id="bNa-3x-bRv"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="ZbT-K2-cOm"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pBr-NJ-YPf">
                                <rect key="frame" x="57" y="120" width="300" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="300" id="8aC-RC-JsY"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Third"/>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="dYG-HF-zeX"/>
                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
                        <constraints>
                            <constraint firstItem="pBr-NJ-YPf" firstAttribute="centerX" secondItem="49k-5X-zZZ" secondAttribute="centerX" id="80B-4t-4Dn"/>
...
