//
//  SesacWeek23UITests.swift
//  SesacWeek23UITests
//
//  Created by AlexHwang on 2022/02/28.
//

import XCTest

class SesacWeek23UITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        let app = XCUIApplication()
        
        app.launch()
        
        app.staticTexts["First"].tap()
        app.staticTexts["Second"].tap()
    }
    
    func testViewControllerTransition() throws {
                let app = XCUIApplication()
        
        app.launch()
        
        app.staticTexts["Second"].tap()
        app.staticTexts["Third"].tap()
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
