//
//  UserTextFieldTest.swift
//  SesacWeek23UITests
//
//  Created by AlexHwang on 2022/03/02.
//

import XCTest

class UserTextFieldTests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        let app = XCUIApplication()
        
        app.launch()
        
        app.textFields["Text Field1"].tap()
        app.textFields["Text Field1"].typeText("hi")
        
        //app.staticTexts["First"].tap()
        
        XCTAssertEqual(app.staticTexts.element(matching: .any, identifier: "label").label, "안녕하세요", "수정 필요")
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
